tests/ixml_not_013_eof_fail.test
START
s = vp, ~[].
vp = [L], !'a'.
INPUT
aa
OUTPUT
ixml:1:2: syntax error
aa
 ^
END